--- a/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
     "from spacytextblob.spacytextblob import SpacyTextBlob\n",
     "\n",
     "AUTHOR='William Blake'\n",
-    "POEM = 'The Tyger'\n",
+    "POEM = 'A POISON TREE'\n",
     "\n",
     "URL = f'https://poetrydb.org/author,title/{AUTHOR};{POEM}'\n",
     "result = json.loads(requests.get(URL).text)\n",
@@ -59,51 +59,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original Document:\n",
-      " \n",
-      " Tyger, tyger, burning bright\n",
-      "In the forests of the night,\n",
-      "What immortal hand or eye\n",
-      "Could frame thy fearful symmetry?\n",
       "\n",
-      "In what distant deeps or skies\n",
-      "Burnt the fire of thine eyes?\n",
-      "On what wings dare he aspire?\n",
-      "What the hand dare seize the fire?\n",
+      "Count of text: 634. Count of doc: 206\n",
       "\n",
-      "And what shoulder and what art\n",
-      "Could twist the sinews of thy heart?\n",
-      "And, when thy heart began to beat,\n",
-      "What dread hand and what dread feet?\n",
+      "Raw polarity Score: -0.07499999999999997 \n",
+      "Polarity Score: -0.07\n",
       "\n",
-      "What the hammer?  what the chain?\n",
-      "In what furnace was thy brain?\n",
-      "What the anvil? what dread grasp\n",
-      "Dare its deadly terrors clasp?\n",
-      "\n",
-      "When the stars threw down their spears,\n",
-      "And watered heaven with their tears,\n",
-      "Did he smile his work to see?\n",
-      "Did he who made the lamb make thee?\n",
-      "\n",
-      "Tyger, tyger, burning bright\n",
-      "In the forests of the night,\n",
-      "What immortal hand or eye\n",
-      "Dare frame thy fearful symmetry?\n",
-      "\n",
-      "Count of text: 946. Count of doc: 285\n",
-      "\n",
-      "Raw polarity Score: -0.14506172839506173 \n",
-      "Polarity Score: -0.15\n",
-      "\n",
-      "With a score of -0.15, we have a slightly negative yet almost neutural text reaction.\n"
+      "With a score of -0.07, we have a slightly negative yet almost neutral tone. This means this text has more negative words than positive. Considering the poem has a theme about anger, this is kinda shocking to me. I would have expected closer to a -1.0.\n"
      ]
     }
    ],
@@ -114,10 +83,10 @@
     "doc = nlp(text)\n",
     "p_score = doc._.blob.polarity\n",
     "\n",
-    "print('Original Document:\\n \\n', poem)\n",
+    "# print('Original Document:\\n \\n', poem)\n",
     "print(f'\\nCount of text: {len(text)}. Count of doc: {len(doc)}')\n",
     "print(f'\\nRaw polarity Score: {p_score} \\nPolarity Score: {round(p_score, 2)}')\n",
-    "print('\\nWith a score of -0.15, we have a slightly negative yet almost neutural text reaction.')"
+    "print(f'\\nWith a score of {round(p_score, 2)}, we have a slightly negative yet almost neutral tone. This means this text has more negative words than positive. Considering the poem has a theme about anger, this is kinda shocking to me. I would have expected closer to a -1.0.')"
    ]
   },
   {
@@ -131,19 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Poem Title:         Stanzas to the Rose\n",
-      "Poem Author:        Robinson\n",
-      "Polarity Score:     0.33\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "############################# DELETE MEEEEEE https://poetrydb.org/author/Thomas%20Moore\n",
     "\n",
@@ -166,25 +125,22 @@
     "    for i in json_object:\n",
     "        body = i['lines']  \n",
     "        title = i['title']      \n",
-    "        print(f\"{'Poem Title:':<19} {i['title']}\")\n",
-    "        print(f\"{'Poem Author:':<20}{i['author']}\")\n",
-    "        print(f\"{'Polarity Score:':<20}{round(p_score,2)}\")\n",
-    "        # print('\\n',body)\n",
     "    \n",
     "    # Write the data\n",
     "    with open(f\"{title}.json\", \"w\") as outfile:\n",
     "        json.dump(json_object, outfile)\n",
     "\n",
     "# Define variables\n",
-    "request_name = 'robinson' #input('What is the full name of the author?') \n",
-    "request_poem = 'stanzas to the' #input('What is the name of the poem?')  \n",
+    "request_author = 'Edward Lear' #input('What is the full name of the author?') \n",
+    "request_poem = 'There Was an Old Man in a Tree' #input('What is the name of the poem?')  \n",
     "\n",
     "# Execute function\n",
-    "function(request_name, request_poem)\n",
+    "function(request_author, request_poem)\n",
     "\n",
     "# People \n",
-    "# 'William Blake' 'Alexander Pope' 'Robinson'\n",
-    "# 'The Tyger'     'The Alley'      'Stanzas to the Rose'"
+    "# 1                2                      3                      4\n",
+    "# 'William Blake'  'Adam Lindsay Gordon'  'Robinson'             'Edward Lear'\n",
+    "# 'A POISON TREE'  'A Song of Autumn'     'Stanzas to the Rose'  'There Was an Old Man in a Tree'"
    ]
   },
   {
@@ -198,23 +154,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Poem Title:         Stanzas to the Rose\n",
-      "Poem Author:        Robinson\n",
-      "Polarity Score:     0.33\n"
+      "Poem Title:         There Was an Old Man in a Tree\n",
+      "Poem Author:        Edward Lear\n",
+      "Polarity Score:     -0.24\n",
+      "\n",
+      " ['There was an Old Man in a tree,', 'Who was horribly bored by a bee.', 'When they said \"Does it buzz?\"', 'He replied \"Yes, it does!', 'It\\'s a regular brute of a bee!\"']\n"
      ]
     }
    ],
    "source": [
-    "file1 = 'The Tyger'             # 'William Blake'  \n",
-    "file2 = 'The Alley'             # 'Alexander Pope'\n",
-    "file3 = 'Stanzas to the Rose'   # 'Robinson'\n",
+    "file1 = 'A POISON TREE'\n",
+    "file2 = 'A Song of Autumn'\n",
+    "file3 = 'Stanzas to the Rose'\n",
+    "file4 = 'There Was an Old Man in a Tree'\n",
+    "bonus_round = request_poem \n",
     "\n",
     "def func_read_song_from_api_in_json(file_choice):\n",
     "    nlp = spacy.load('en_core_web_sm')\n",
@@ -231,10 +191,15 @@
     "        print(f\"{'Poem Title:':<19} {i['title']}\")\n",
     "        print(f\"{'Poem Author:':<20}{i['author']}\")\n",
     "        print(f\"{'Polarity Score:':<20}{round(p_score,2)}\")\n",
-    "        # print('\\n',body)\n",
+    "        print('\\n',body)\n",
     "\n",
     "\n",
-    "func_read_song_from_api_in_json(file3)"
+    "func_read_song_from_api_in_json(file4)\n",
+    "\n",
+    "# I dont' understand the premise of the polarity score. From my research it is a useful tool for depicting the\n",
+    "# tone of text, be it more negative than positive. A POSION TREE by Blake has many negative words such as \"angry, \n",
+    "# wrath, tears, fears, decietful, foe, stole\" and yet it has a very minor negative score. Then we have There Was \n",
+    "# an Old Man in a Tree by Lear and it's vastly more negative. It's confusing to me."
    ]
   }
  ],
