--- a/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.14506172839506173\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import json\n",
@@ -30,9 +38,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Document: \n",
+      " [{'title': 'The Tyger', 'author': 'William Blake', 'lines': ['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  what the chain?', 'In what furnace was thy brain?', 'What the anvil? what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}]\n",
+      "\n",
+      "Count of text: 946. Count of doc: 285\n",
+      "\n",
+      "Raw polarity Score: -0.14506172839506173 \n",
+      "Polarity Score: -0.15\n",
+      "\n",
+      "With a score of -0.15, we have a slightly negative yet almost neutural text reaction.\n"
+     ]
+    }
+   ],
    "source": [
     "nlp = spacy.load('en_core_web_sm')\n",
     "text = str(result)\n",
@@ -48,9 +72,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "{\n",
+      "'\n",
+      "t\n",
+      "i\n",
+      "t\n",
+      "l\n",
+      "e\n",
+      "'\n",
+      ":\n"
+     ]
+    }
+   ],
    "source": [
     "for token in text[0:10]:\n",
     "    print (token)"
@@ -58,9 +99,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "{\n",
+      "'\n",
+      "title\n",
+      "'\n",
+      ":\n",
+      "'\n",
+      "The\n",
+      "Tyger\n",
+      "'\n"
+     ]
+    }
+   ],
    "source": [
     "for token in doc[0:10]:\n",
     "    print (token)"
@@ -68,9 +126,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'title':\n",
+      "'The\n",
+      "Tyger',\n",
+      "'author':\n",
+      "'William\n",
+      "Blake',\n",
+      "'lines':\n",
+      "['Tyger,\n",
+      "tyger,\n",
+      "burning\n"
+     ]
+    }
+   ],
    "source": [
     "for token in text.split()[:10]:\n",
     "    print(token)"
@@ -78,9 +153,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'title': 'The Tyger', 'author': 'William Blake', 'lines':\n",
+      "['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  \n",
+      "what the chain?', 'In what furnace was thy brain?', 'What the anvil?\n",
+      "what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}]\n"
+     ]
+    }
+   ],
    "source": [
     "for sent in doc.sents:\n",
     "    print(sent)"
@@ -88,9 +174,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'generator' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m sentence1 \u001b[39m=\u001b[39m doc\u001b[39m.\u001b[39;49msents[\u001b[39m0\u001b[39;49m]\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(sentence1)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'generator' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "sentence1 = doc.sents[0]\n",
     "print(sentence1)"
@@ -492,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -607,11 +705,96 @@
     "        print(line)\n",
     "    print()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import required modules\n",
+    "import requests\n",
+    "import json\n",
+    "import spacy \n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "\n",
+    "#%%%%% DELETE MEEEEEE https://poetrydb.org/author/Thomas%20Moore\n",
+    "\n",
+    "# Create function\n",
+    "def func_write_song_from_api_to_json(request_name, request_poem):\n",
+    "    # Pull function's data\n",
+    "    URL = f'https://poetrydb.org/author,title/{request_name};{request_poem}'\n",
+    "    json_object = json.loads(requests.get(URL).text)\n",
+    "    \n",
+    "    # Sentiment analysis\n",
+    "    nlp = spacy.load('en_core_web_sm')\n",
+    "    nlp.add_pipe(\"spacytextblob\")\n",
+    "    \n",
+    "    # Modify data\n",
+    "    text = str(json_object)\n",
+    "    doc = nlp(text)    \n",
+    "    p_score = doc._.blob.polarity\n",
+    "    \n",
+    "    # Print information\n",
+    "    for i in json_object:\n",
+    "        body = i['lines']  \n",
+    "        title = i['title']\n",
+    "        print(f\"{'Poem Title:':<19} {i['title']}\")\n",
+    "        print(f\"{'Poem Author:':<20}{i['author']}\")\n",
+    "        print(f\"{'Polarity Score:':<20}{round(p_score,2)}\")\n",
+    "        print('\\n',body)\n",
+    "    \n",
+    "    # Write the data\n",
+    "    with open(f\"{title}.json\", \"w\") as outfile:\n",
+    "        json.dump(json_object, outfile)\n",
+    "\n",
+    "# Define variables\n",
+    "request_name = 'Robinson' #input('What is the full name of the author?')\n",
+    "request_poem = 'Stanzas to the Rose' #input('What is the name of the poem?')          \n",
+    "\n",
+    "# Execute function\n",
+    "func_write_song_from_api_to_json(request_name, request_poem)\n",
+    "\n",
+    "# file1 = 'The Tyger'             # 'William Blake'  \n",
+    "# file2 = 'The Alley'             # 'Alexander Pope'\n",
+    "# file3 = 'Stanzas to the Rose'   # 'Robinson'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file1 = 'The Tyger'             # 'William Blake'  \n",
+    "file2 = 'The Alley'             # 'Alexander Pope'\n",
+    "file3 = 'Stanzas to the Rose'   # 'Robinson'\n",
+    "\n",
+    "def func_read_song_from_api_in_json(file_choice):\n",
+    "    nlp = spacy.load('en_core_web_sm')\n",
+    "    nlp.add_pipe(\"spacytextblob\") \n",
+    "    with open(f'{file_choice}.json','r') as file:\n",
+    "        json_data = json.load(file)\n",
+    "\n",
+    "    text = str(json_data)\n",
+    "    doc = nlp(text)    \n",
+    "    p_score = doc._.blob.polarity\n",
+    "\n",
+    "    for i in json_data:\n",
+    "        body = i['lines']  \n",
+    "        print(f\"{'Poem Title:':<19} {i['title']}\")\n",
+    "        print(f\"{'Poem Author:':<20}{i['author']}\")\n",
+    "        print(f\"{'Polarity Score:':<20}{round(p_score,2)}\")\n",
+    "        print('\\n',body)\n",
+    "\n",
+    "\n",
+    "func_read_song_from_api_in_json(file3)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -625,12 +808,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "af31991c939d0d47fd88192dde140282c60bcd0650d9319c70f9d5b7f17cd661"
+    "hash": "0ae41e45250eb696c2277dfbd939b9be222f957334433f60364f37f2e4b8f76d"
    }
   }
  },
