--- a/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
@@ -235,7 +235,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit (microsoft store)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
