--- a/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
@@ -177,18 +177,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Poem 1: \n",
       "Poem Title:         A POISON TREE\n",
       "Poem Author:        William Blake\n",
       "Polarity Score:     -0.07\n",
       "\n",
-      " ['I was angry with my friend:', 'I told my wrath, my wrath did end.', 'I was angry with my foe:', 'I told it not, my wrath did grow.', '', 'And I watered it in fears', 'Night and morning with my tears,', 'And I sunned it with smiles', 'And with soft deceitful wiles.', '', 'And it grew both day and night,', 'Till it bore an apple bright,', 'And my foe beheld it shine,', 'and he knew that it was mine,--', '', 'And into my garden stole', 'When the night had veiled the pole;', 'In the morning, glad, I see', 'My foe outstretched beneath the tree.']\n"
+      "Poem 2: \n",
+      "Poem Title:         A Song of Autumn\n",
+      "Poem Author:        Adam Lindsay Gordon\n",
+      "Polarity Score:     0.03\n",
+      "\n",
+      "Poem 3: \n",
+      "Poem Title:         Stanzas to the Rose\n",
+      "Poem Author:        Robinson\n",
+      "Polarity Score:     0.33\n",
+      "\n",
+      "Poem 4: \n",
+      "Poem Title:         There Was an Old Man in a Tree\n",
+      "Poem Author:        Edward Lear\n",
+      "Polarity Score:     -0.24\n"
      ]
     }
    ],
@@ -221,10 +235,16 @@
     "        print(f\"{'Poem Title:':<19} {i['title']}\")\n",
     "        print(f\"{'Poem Author:':<20}{i['author']}\")\n",
     "        print(f\"{'Polarity Score:':<20}{round(p_score,2)}\")\n",
-    "        print('\\n',body)\n",
+    "        # print('\\n',body)\n",
     "\n",
-    "\n",
-    "func_read_song_from_api_in_json(bonus_round)\n",
+    "print('Poem 1: ')\n",
+    "func_read_song_from_api_in_json(file1)\n",
+    "print('\\nPoem 2: ')\n",
+    "func_read_song_from_api_in_json(file2)\n",
+    "print('\\nPoem 3: ')\n",
+    "func_read_song_from_api_in_json(file3)\n",
+    "print('\\nPoem 4: ')\n",
+    "func_read_song_from_api_in_json(file4)\n",
     "\n",
     "# I dont' understand the premise of the polarity score. From my research it is a useful tool for depicting the\n",
     "# tone of text, be it more negative than positive. A POSION TREE by Blake has many negative words such as \"angry, \n",
