--- a/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
@@ -31,9 +31,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poem Title:   A POISON TREE\n",
+      "Poem Author:   William Blake\n",
+      "\n",
+      " I was angry with my friend:\n",
+      "I told my wrath, my wrath did end.\n",
+      "I was angry with my foe:\n",
+      "I told it not, my wrath did grow.\n",
+      "\n",
+      "And I watered it in fears\n",
+      "Night and morning with my tears,\n",
+      "And I sunned it with smiles\n",
+      "And with soft deceitful wiles.\n",
+      "\n",
+      "And it grew both day and night,\n",
+      "Till it bore an apple bright,\n",
+      "And my foe beheld it shine,\n",
+      "and he knew that it was mine,--\n",
+      "\n",
+      "And into my garden stole\n",
+      "When the night had veiled the pole;\n",
+      "In the morning, glad, I see\n",
+      "My foe outstretched beneath the tree.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import modules\n",
     "import requests\n",
@@ -42,13 +71,24 @@
     "from spacytextblob.spacytextblob import SpacyTextBlob\n",
     "\n",
     "# Poem selection\n",
-    "AUTHOR='William Blake'\n",
-    "POEM = 'A POISON TREE'\n",
+    "author ='William Blake'\n",
+    "poem_title = 'A POISON TREE'\n",
     "\n",
     "# Pull request\n",
-    "URL = f'https://poetrydb.org/author,title/{AUTHOR};{POEM}'\n",
-    "result = json.loads(requests.get(URL).text)\n",
-    "poem = '\\n'.join(result[0]['lines'])"
+    "URL = f'https://poetrydb.org/author,title/{author};{poem_title}'\n",
+    "json_object = json.loads(requests.get(URL).text)\n",
+    "poem = '\\n'.join(json_object[0]['lines'])\n",
+    "\n",
+    "# I thought I was done and then I checked the criteria? There seems to be a rather large difference in the \n",
+    "# grading criteria and the questions being asked, so I wrote to a file to cover me.\n",
+    "\n",
+    "# Write the data\n",
+    "with open(f\"{poem_title}.json\", \"w\") as outfile:\n",
+    "    json.dump(json_object, outfile)\n",
+    "\n",
+    "print(f\"{'Poem Title:':<14}{poem_title}\")\n",
+    "print(f\"{'Poem Author:':<15}{author}\")\n",
+    "print('\\n',poem)"
    ]
   },
   {
@@ -62,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +110,6 @@
      "output_type": "stream",
      "text": [
       "Original Document:\n",
-      " \n",
       " I was angry with my friend:\n",
       "I told my wrath, my wrath did end.\n",
       "I was angry with my foe:\n",
@@ -90,8 +129,8 @@
       "When the night had veiled the pole;\n",
       "In the morning, glad, I see\n",
       "My foe outstretched beneath the tree.\n",
+      "\n",
       "JSON Document:\n",
-      " \n",
       " [{'title': 'A POISON TREE', 'author': 'William Blake', 'lines': ['I was angry with my friend:', 'I told my wrath, my wrath did end.', 'I was angry with my foe:', 'I told it not, my wrath did grow.', '', 'And I watered it in fears', 'Night and morning with my tears,', 'And I sunned it with smiles', 'And with soft deceitful wiles.', '', 'And it grew both day and night,', 'Till it bore an apple bright,', 'And my foe beheld it shine,', 'and he knew that it was mine,--', '', 'And into my garden stole', 'When the night had veiled the pole;', 'In the morning, glad, I see', 'My foe outstretched beneath the tree.'], 'linecount': '16'}]\n",
       "\n",
       "Count of text: 634. Count of doc: 206\n",
@@ -104,16 +143,19 @@
     }
    ],
    "source": [
+    "with open(f'{poem_title}.json','r') as file:\n",
+    "    json_data = json.load(file)\n",
+    "\n",
     "# Load/transform spaCy data\n",
     "nlp = spacy.load('en_core_web_sm')\n",
-    "text = str(result)\n",
+    "text = str(json_data)\n",
     "nlp.add_pipe(\"spacytextblob\")\n",
     "doc = nlp(text)\n",
     "p_score = doc._.blob.polarity\n",
     "\n",
     "# Print data\n",
-    "print('Original Document:\\n \\n', poem)\n",
-    "print('JSON Document:\\n \\n', result)\n",
+    "print('Original Document:\\n', poem)\n",
+    "print('\\nJSON Document:\\n', json_data)\n",
     "print(f'\\nCount of text: {len(text)}. Count of doc: {len(doc)}')\n",
     "print(f'\\nRaw polarity Score: {p_score} \\nPolarity Score: {round(p_score, 2)}')\n",
     "print(f'\\nWith a score of {round(p_score, 2)}, we have a slightly negative yet almost neutral tone. This means this text has more negative words than positive. Considering the poem has a theme about anger, this is kinda shocking to me. I would have expected closer to a -1.0.')"
@@ -130,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,29 +219,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Poem 1: \n",
+      "Poem 1\n",
       "Poem Title:         A POISON TREE\n",
       "Poem Author:        William Blake\n",
       "Polarity Score:     -0.07\n",
       "\n",
-      "Poem 2: \n",
+      "Poem 2\n",
       "Poem Title:         A Song of Autumn\n",
       "Poem Author:        Adam Lindsay Gordon\n",
       "Polarity Score:     0.03\n",
       "\n",
-      "Poem 3: \n",
+      "Poem 3\n",
       "Poem Title:         Stanzas to the Rose\n",
       "Poem Author:        Robinson\n",
       "Polarity Score:     0.33\n",
       "\n",
-      "Poem 4: \n",
+      "Poem 4\n",
       "Poem Title:         There Was an Old Man in a Tree\n",
       "Poem Author:        Edward Lear\n",
       "Polarity Score:     -0.24\n"
@@ -237,13 +279,13 @@
     "        print(f\"{'Polarity Score:':<20}{round(p_score,2)}\")\n",
     "        # print('\\n',body)\n",
     "\n",
-    "print('Poem 1: ')\n",
+    "print('Poem 1')\n",
     "func_read_song_from_api_in_json(file1)\n",
-    "print('\\nPoem 2: ')\n",
+    "print('\\nPoem 2')\n",
     "func_read_song_from_api_in_json(file2)\n",
-    "print('\\nPoem 3: ')\n",
+    "print('\\nPoem 3')\n",
     "func_read_song_from_api_in_json(file3)\n",
-    "print('\\nPoem 4: ')\n",
+    "print('\\nPoem 4')\n",
     "func_read_song_from_api_in_json(file4)\n",
     "\n",
     "# I dont' understand the premise of the polarity score. From my research it is a useful tool for depicting the\n",
