--- a/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
@@ -24,14 +24,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 1 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -\n",
+    "# Question 1 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - \n",
     "\n",
     "1. The following code accesses the [lyrics.ovh](https://lyricsovh.docs.apiary.io/#reference/0/lyrics-of-a-song/search) public api, searches for the lyrics of a song, and stores it in a dictionary object.  Write the resulting json to a file (either a JSON file or a pickle file; you choose). You will read in the contents of this file for future questions so we do not need to frequently access the API."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -95,14 +95,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 2 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -\n",
+    "# Question 2 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - \n",
     "\n",
     "2. Read in the contents of your file.  Print the lyrics of the song (not the entire dictionary!) and use spaCyTextBlob to perform sentiment analysis on the lyrics.  Print the polarity score of the sentiment analysis.  Given that the range of the polarity score is `[-1.0,1.0]` which corresponds to how positive or negative the text in question is, do you think the lyrics have a more positive or negative connotaion?  Answer this question in a comment in your code cell."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -136,9 +136,7 @@
       "Count of text: 634. Count of doc: 206\n",
       "\n",
       "Raw polarity Score: -0.07499999999999997 \n",
-      "Polarity Score: -0.07\n",
-      "\n",
-      "With a score of -0.07, we have a slightly negative yet almost neutral tone. This means this text has more negative words than positive. Considering the poem has a theme about anger, this is kinda shocking to me. I would have expected closer to a -1.0.\n"
+      "Polarity Score: -0.07\n"
      ]
     }
    ],
@@ -158,15 +156,22 @@
     "print('Original Document:\\n', poem)\n",
     "print('\\nJSON Document:\\n', json_data)\n",
     "print(f'\\nCount of text: {len(text)}. Count of doc: {len(doc)}')\n",
-    "print(f'\\nRaw polarity Score: {p_score} \\nPolarity Score: {round(p_score, 2)}')\n",
-    "print(f'\\nWith a score of {round(p_score, 2)}, we have a slightly negative yet almost neutral tone. This means this text has more negative words than positive. Considering the poem has a theme about anger, this is kinda shocking to me. I would have expected closer to a -1.0.')"
+    "print(f'\\nRaw polarity Score: {p_score} \\nPolarity Score: {round(p_score, 2)}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 3 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -\n",
+    "### Question 2 Response\n",
+    "From my research it is a useful tool for depicting the tone of text, informing the user if that tone is more positive or negative. A POSION TREE by Blake has many negative words such as: angry, wrath, tears, fears, deceitful, foe, and stole. Yet it also has as many positive words such as: friend, grow, smiles, soft, sunned, bright, day, shine, and morning. While the poem may have a theme of anger, the words themselves show a somewhat balance between the two polarities. As is reflective of the score."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 3 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - \n",
     "\n",
     "3. Write a function that takes an artist, song, and filename, accesses the lyrics.ovh api to get the song lyrics, and writes the results to the specified filename.  Test this function by getting the lyrics to any four songs of your choice and storing them in different files."
    ]
@@ -213,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 4 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -\n",
+    "# Question 4 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - \n",
     "\n",
     "4. Write a function that takes the name of a file that contains song lyrics, loads the file, performs sentiment analysis, and returns the polarity score.  Use this function to print the polarity scores (with the name of the song) of the three files you created in question 3.  Does the reported polarity match your understanding of the song's lyrics? Why or why not do you think that might be?  Answer the questions in either a comment in the code cell or a markdown cell under the code cell."
    ]
@@ -287,12 +292,15 @@
     "print('\\nPoem 3')\n",
     "func_read_song_from_api_in_json(file3)\n",
     "print('\\nPoem 4')\n",
-    "func_read_song_from_api_in_json(file4)\n",
-    "\n",
-    "# I dont' understand the premise of the polarity score. From my research it is a useful tool for depicting the\n",
-    "# tone of text, be it more negative than positive. A POSION TREE by Blake has many negative words such as \"angry, \n",
-    "# wrath, tears, fears, decietful, foe, stole\" and yet it has a very minor negative score. Then we have There Was \n",
-    "# an Old Man in a Tree by Lear and it's vastly more negative. It's confusing to me."
+    "func_read_song_from_api_in_json(file4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 4 Response\n",
+    "For the most part, the polarities seem to match my understanding of the topic. I would expect something like There Was an Old Man in a Tree to have a higher negative score despite its small size. With a small word count, I would assume that negative and/or positive words would have more of an impact. Stanzas to the Rose is equally high, though having 30 lines. "
    ]
   }
  ],
