--- a/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/pogue_m4_hw.ipynb
@@ -9,7 +9,7 @@
     "## Requests, JSON, and NLP\n",
     "\n",
     "### Student Name: Michael Pogue\n",
-    "### Github Link: https://github.com/MichaelPogue/Northwest-Missouri-State-University/tree/main/Web%20Mining%20and%20Applied%20NLP%20(44-620)\n",
+    "### Github Link: https://github.com/MichaelPogue/Northwest-Missouri-State-University/tree/main/Web%20Mining%20and%20Applied%20NLP%20(44-620)/Module%204\n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
