--- a/Streaming Data (44-671)/module0/test_zone.ipynb
+++ b/Streaming Data (44-671)/module0/test_zone.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,68 +23,80 @@
     "input_file_name = 'batchfile_2_kelvin.csv'\n",
     "output_file_name = 'batchfile_3_farenheit.csv'\n",
     "\n",
-    "input_file_name = \"batchfile_0_farenheit.csv\"\n",
-    "output_file_name = \"batchfile_1_celcius.csv\"\n",
-    "input_file = open(input_file_name, \"r\")\n",
-    "output_file = open(output_file_name, \"w\", newline='')\n",
+    "class tempConver:\n",
+    "    def __init__(self):\n",
+    "        self.BASE_FILE = BASE_FILE\n",
     "\n",
-    "reader = csv.reader(input_file, delimiter=\",\")\n",
-    "writer = csv.writer(output_file, delimiter=\",\")\n",
+    "    def convert_far_cel(self):\n",
+    "        input_file_name = \"batchfile_0_farenheit.csv\"\n",
+    "        output_file_name = \"batchfile_1_celcius.csv\"\n",
+    "        input_file = open(input_file_name, \"r\")\n",
+    "        output_file = open(output_file_name, \"w\", newline='')\n",
     "\n",
-    "header = next(reader)\n",
+    "        reader = csv.reader(input_file, delimiter=\",\")\n",
+    "        writer = csv.writer(output_file, delimiter=\",\")\n",
     "\n",
-    "header_list = [\"Year\",\"Month\",\"Day\",\"Time\",\"TempC\"]\n",
-    "writer.writerow(header_list)\n",
+    "        header = next(reader)\n",
     "\n",
-    "for row in reader:\n",
-    "    Year, Month, Day, Time, TempA = row\n",
-    "    TempB = round((float(TempA) - 32.0) * 5.0 / 9.0,2)\n",
-    "    writer.writerow([Year, Month, Day, Time, TempB])\n",
+    "        header_list = [\"Year\",\"Month\",\"Day\",\"Time\",\"TempC\"]\n",
+    "        writer.writerow(header_list)\n",
     "\n",
-    "output_file.close()\n",
-    "input_file.close()\n",
+    "        for row in reader:\n",
+    "            Year, Month, Day, Time, TempA = row\n",
+    "            TempB = round((float(TempA) - 32.0) * 5.0 / 9.0,2)\n",
+    "            writer.writerow([Year, Month, Day, Time, TempB])\n",
     "\n",
-    "input_file_name = \"batchfile_1_celcius.csv\"\n",
-    "output_file_name = \"batchfile_2_kelvin.csv\"\n",
-    "input_file = open(input_file_name, \"r\")\n",
-    "output_file = open(output_file_name, \"w\", newline='')\n",
+    "        output_file.close()\n",
+    "        input_file.close()\n",
     "\n",
-    "reader = csv.reader(input_file, delimiter=\",\")\n",
-    "writer = csv.writer(output_file, delimiter=\",\")\n",
+    "    def convert_cel_kel(self):\n",
+    "        input_file_name = \"batchfile_1_celcius.csv\"\n",
+    "        output_file_name = \"batchfile_2_kelvin.csv\"\n",
+    "        input_file = open(input_file_name, \"r\")\n",
+    "        output_file = open(output_file_name, \"w\", newline='')\n",
     "\n",
-    "header = next(reader)\n",
+    "        reader = csv.reader(input_file, delimiter=\",\")\n",
+    "        writer = csv.writer(output_file, delimiter=\",\")\n",
     "\n",
-    "header_list = [\"Year\",\"Month\",\"Day\",\"Time\",\"TempK\"]\n",
-    "writer.writerow(header_list)\n",
+    "        header = next(reader)\n",
     "\n",
-    "for row in reader:\n",
-    "    Year, Month, Day, Time, TempA = row\n",
-    "    TempB = round((float(TempA) +273.15),2)\n",
-    "    writer.writerow([Year, Month, Day, Time, TempB])\n",
+    "        header_list = [\"Year\",\"Month\",\"Day\",\"Time\",\"TempK\"]\n",
+    "        writer.writerow(header_list)\n",
     "\n",
-    "output_file.close()\n",
-    "input_file.close()\n",
+    "        for row in reader:\n",
+    "            Year, Month, Day, Time, TempA = row\n",
+    "            TempB = round((float(TempA) +273.15),2)\n",
+    "            writer.writerow([Year, Month, Day, Time, TempB])\n",
     "\n",
-    "input_file_name = \"batchfile_2_kelvin.csv\"\n",
-    "output_file_name = \"batchfile_3_farenheit.csv\"\n",
-    "input_file = open(input_file_name, \"r\")\n",
-    "output_file = open(output_file_name, \"w\", newline='')\n",
+    "        output_file.close()\n",
+    "        input_file.close()\n",
     "\n",
-    "reader = csv.reader(input_file, delimiter=\",\")\n",
-    "writer = csv.writer(output_file, delimiter=\",\")\n",
+    "    def convert_kel_far(self):\n",
+    "        input_file_name = \"batchfile_2_kelvin.csv\"\n",
+    "        output_file_name = \"batchfile_3_farenheit.csv\"\n",
+    "        input_file = open(input_file_name, \"r\")\n",
+    "        output_file = open(output_file_name, \"w\", newline='')\n",
     "\n",
-    "header = next(reader)\n",
+    "        reader = csv.reader(input_file, delimiter=\",\")\n",
+    "        writer = csv.writer(output_file, delimiter=\",\")\n",
     "\n",
-    "header_list = [\"Year\",\"Month\",\"Day\",\"Time\",\"TempF\"]\n",
-    "writer.writerow(header_list)\n",
+    "        header = next(reader)\n",
     "\n",
-    "for row in reader:\n",
-    "    Year, Month, Day, Time, TempA = row\n",
-    "    TempB = round(((float(TempA)* 9/5) - 459.67),2)  \n",
-    "    writer.writerow([Year, Month, Day, Time, TempB])\n",
+    "        header_list = [\"Year\",\"Month\",\"Day\",\"Time\",\"TempF\"]\n",
+    "        writer.writerow(header_list)\n",
     "\n",
-    "output_file.close()\n",
-    "input_file.close()"
+    "        for row in reader:\n",
+    "            Year, Month, Day, Time, TempA = row\n",
+    "            TempB = round(((float(TempA)* 9/5) - 459.67),2)  \n",
+    "            writer.writerow([Year, Month, Day, Time, TempB])\n",
+    "\n",
+    "        output_file.close()\n",
+    "        input_file.close()\n",
+    "\n",
+    "tc = tempConver\n",
+    "tc.convert_far_cel(BASE_FILE)\n",
+    "tc.convert_cel_kel(BASE_FILE)\n",
+    "tc.convert_kel_far(BASE_FILE)"
    ]
   }
  ],
