--- a/test/Untitled-1.ipynb
+++ b/test/Untitled-1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Attempt 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -42,8 +50,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Attempt 2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +98,7 @@
     "        print (f\"Sent: {MESSAGE} on port {port}.\")\n",
     "\n",
     "        # sleep for a few seconds\n",
-    "        time.sleep(3)\n",
+    "        time.sleep(1)\n",
     "\n",
     "def jobTwo():\n",
     "    # Set input and output.\n",
@@ -104,17 +120,20 @@
     "        TempB = round((float(TempA) - 32.0) * 5.0 / 9.0,2)\n",
     "        writer.writerow([Year, Month, Day, Time, TempB])\n",
     "        print (f\"Sent: {TempA} on port {TempB}.\")\n",
+    "        time.sleep(2)\n",
     "\n",
-    "p1 = multiprocessing.Process(target=jobOne)\n",
-    "p2 = multiprocessing.Process(target=jobTwo)\n",
     "\n",
-    "# start each process\n",
-    "p1.start()\n",
-    "p2.start()\n",
+    "if __name__ == \"__main__\":\n",
+    "    p1 = multiprocessing.Process(target=jobOne)\n",
+    "    p2 = multiprocessing.Process(target=jobTwo)\n",
     "\n",
-    "# wait for a processes to finish and rejoin the flow of execution\n",
-    "p1.join()\n",
-    "p2.join()"
+    "    # start each process\n",
+    "    p1.start()\n",
+    "    p2.start()\n",
+    "\n",
+    "    # wait for a processes to finish and rejoin the flow of execution\n",
+    "    p1.join()\n",
+    "    p2.join()"
    ]
   }
  ],
@@ -134,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
